# pezkuwi-sdk-minimal-template

./: Cargo.toml  README.md
node/: Cargo.toml  build.rs
node/src/: chain_spec.rs  cli.rs  command.rs  lib.rs  main.rs  rpc.rs  service.rs
pezpallets/: README.md
pezpallets/template/: Cargo.toml
pezpallets/template/src/: lib.rs
runtime/: Cargo.toml  README.md  build.rs
runtime/src/: lib.rs
