[workspace.package]
license = "MIT-0"
authors = ["Pezkuwi <admin@pezkuwihain.io>"]
homepage = "https://github.com/pezkuwichain/"
repository = "https://github.com/pezkuwichain/pezkuwi-sdk-minimal-template.git"
edition = "2021"

[workspace]
default-members = ["pezpallets/template", "runtime"]
members = [
    "node",
    "pezpallets/template",
    "runtime",
]
resolver = "2"

[workspace.dependencies]
pez-minimal-template-runtime = { path = "./runtime", default-features = false }
pezpallet-minimal-template = { path = "./pezpallets/template", default-features = false }
clap = { version = "4.5.13" }
docify = { version = "0.2.9" }
futures = { version = "0.3.31" }
futures-timer = { version = "3.0.2" }
jsonrpsee = { version = "0.24.3" }
codec = { version = "3.7.5", default-features = false, package = "parity-scale-codec" }
scale-info = { version = "2.11.6", default-features = false }
serde_json = { version = "1.0.132", default-features = false }
pezkuwi-sdk = { version = "0.1.0", default-features = false }
pezframe-support = { version = "28.0.0", default-features = false }
pezframe-system = { version = "28.0.0", default-features = false }
pezpallet-balances = { version = "28.0.0", default-features = false }
pezpallet-sudo = { version = "28.0.0", default-features = false }
pezpallet-timestamp = { version = "27.0.0", default-features = false }
pezpallet-transaction-payment = { version = "28.0.0", default-features = false }
pezpallet-transaction-payment-rpc-runtime-api = { version = "28.0.0", default-features = false }
pezsp-api = { version = "26.0.0", default-features = false } # Corrected version
pezsp-keyring = { version = "28.0.0", default-features = false } # Assumed version
pezsp-weights = { version = "28.0.0", default-features = false } # Assumed version


[profile.release]
opt-level = 3
panic = "unwind"

[profile.production]
codegen-units = 1
inherits = "release"
lto = true

