[package]
name = "pez-minimal-template-node"
description = "A minimal bizinikiwi-based bizinikiwi node, ready for hacking."
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
clap = { features = ["derive"], workspace = true }
docify = { workspace = true }
futures = { features = ["thread-pool"], workspace = true }
futures-timer = { workspace = true }
jsonrpsee = { features = ["server"], workspace = true }
pez-minimal-template-runtime = { workspace = true }
pezkuwi-sdk = { workspace = true, features = ["experimental", "node"] }

[build-dependencies]
pezkuwi-sdk = { workspace = true, features = ["bizinikiwi-build-script-utils"] }

[features]
default = ["std"]
std = [
	"pez-minimal-template-runtime/std",
	"pezkuwi-sdk/std",
]
