[package]
name = "pez-minimal-template-runtime"
description = "A solochain runtime template built with Bizinikiwi, part of Pezkuwi SDK."
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[dependencies]
codec = { workspace = true }
pezpallet-minimal-template.workspace = true
pezkuwi-sdk = { workspace = true, features = ["pezpallet-balances", "pezpallet-sudo", "pezpallet-timestamp", "pezpallet-transaction-payment", "pezpallet-transaction-payment-rpc-runtime-api", "runtime", "pezsp-api"] }
scale-info = { workspace = true }
serde_json = { workspace = true, default-features = false, features = ["alloc"] }

[build-dependencies]
pezkuwi-sdk = { optional = true, workspace = true, features = ["bizinikiwi-wasm-builder"] }

[features]
default = ["std"]
std = [
	"codec/std",
	"pezpallet-minimal-template/std",
	"pezkuwi-sdk/std",
	"scale-info/std",
	"serde_json/std",
]
