[package]
name = "pezpallet-minimal-template"
description = "A minimal pezpallet built with Pezframe, part of Pezkuwi SDK."
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
pezkuwi-sdk = { workspace = true, features = ["experimental", "runtime"], default-features = false }
scale-info = { features = ["derive"], workspace = true }


[features]
default = ["std"]
std = ["codec/std", "pezkuwi-sdk/std", "scale-info/std"]
